# fuchsia

./: .dtsfmtrc.toml  .fx-root  .geminiignore  .gitignore  .gitmodules  .gn  BUILD.gn  CIDER_AGENT.md  GEMINI.md  OWNERS  README.md  TESTING.json5  fuchsia.code-workspace  pyproject.toml  pyrightconfig.json  rustfmt.toml  shac.textproto
boards/: BUILD.bazel  README.md  arm64.gni  emac.gni  qemu-arm64.gni  riscv64.gni  vim3-devicetree.gni  vim3.gni  x64.gni
boards/arm64/: BUILD.bazel  BUILD.gn
boards/common/: arm64-common.gni
boards/emac/: BUILD.bazel
boards/emulation/: virtio_drivers.gni
boards/kernel_cmdline/: BUILD.gn
boards/partitions/: BUILD.gn
boards/pkvm/: BUILD.bazel  BUILD.gn
boards/qemu-arm64/: BUILD.bazel  BUILD.gn
boards/riscv64/: BUILD.bazel  BUILD.gn
boards/testing/: BUILD.gn
boards/vim3/: BUILD.bazel  BUILD.gn  vim3_features.bzl
boards/x64/: BUILD.bazel  BUILD.gn
bundles/assembly/: BUILD.bazel  BUILD.gn  README.md  platform_aibs.bzl  platform_aibs.gni
bundles/bringup/: BUILD.gn
bundles/docs_roller/: BUILD.gn  README.md
examples/drivers/: BUILD.gn
examples/rcu/: BUILD.gn  OWNERS
products/: BUILD.gn  bringup.gni  bringup_with_tests.gni  core.gni  core_size_limits.gni  core_with_f2fs.gni  core_with_minfs.gni  fuchsia.gni  microfuchsia_eng.gni  minimal.gni  terminal.gni  workbench_eng.gni
products/bringup/: BUILD.bazel  BUILD.gn  bringup_args.gni  platform_config.bzl
products/common/: core_size_limits.gni
products/core/: BUILD.bazel  BUILD.gn  OWNERS  core_bazel_inputs.gni  size_checker.json
products/microfuchsia/: BUILD.bazel  BUILD.gn
products/minimal/: BUILD.bazel  BUILD.gn  minimal.bzl
products/terminal/: BUILD.bazel  BUILD.gn
products/tests/: BUILD.gn  minimal_boot_user.gni
products/workbench/: BUILD.bazel  BUILD.gn  platform_config.bzl
products/zedboot/: BUILD.bazel  BUILD.gn
sdk/: BUILD.bazel  BUILD.gn  TESTING.json5  atom_lists.bzl  generate_idk_targets.gni  idk_contents.gni  updating_golden_files.md  version_history.json  working_with_subbuilds.md
sdk/bundles/: BUILD.gn
sdk/categories/: BUILD.gn
sdk/ctf/: BUILD.gn  TESTING.json5  disabled_tests.json
sdk/docs/: BUILD.gn
sdk/fidl/: BUILD.bazel  BUILD.gn  OWNERS  TESTING.json5  bazel2gn_verification_targets.gni  category_lists.bzl
sdk/firmware/: BUILD.gn
sdk/history/: IN_DEVELOPMENT_API_LEVEL_OWNERS
sdk/lib/: BUILD.gn
sdk/manifests/: fuchsia_idk.manifest  pdk.manifest
sdk/pdk/: BUILD.gn
sdk/rust/: TESTING.json5
sdk/schema/: common-00000000.json
tools/: BUILD.gn  OWNERS  TESTING.json5  bazel_root_targets_list.gni
tools/artifactory/: BUILD.gn  debug_symbols.go  debug_symbols_test.go  images.go  images_test.go  licenses_test.go  tools.go
tools/assemblydoc/: BUILD.gn
tools/auto_owners/: BUILD.gn
tools/bazel-docgen/: BUILD.gn  bazel_docgen.gni  doc_generator.go  markdown_renderer.go  markdown_renderer_test.go  templates.go
tools/bindc/: BUILD.gn
tools/bootserver/: BUILD.gn  image.go  image_test.go
tools/botanist/: BUILD.bazel  BUILD.gn  README.md  common.go  common_test.go  pkg.go
tools/bundle_fetcher/: BUILD.gn
tools/cargo-gnaw/: BUILD.bazel  BUILD.gn  Cargo.toml.crates-io  README.md
tools/check-licenses/: BUILD.bazel  BUILD.gn  OWNERS
tools/clidoc/: BUILD.gn
tools/cmc/: BUILD.gn
tools/component_id_index/: BUILD.gn
tools/component_manager_config/: BUILD.gn
tools/configc/: BUILD.gn
tools/create/: BUILD.bazel  BUILD.gn
tools/dart_test_parser/: BUILD.gn  dartsystemtest.go  dartsystemtest_test.go
tools/debroot/: BUILD.bazel  BUILD.gn
tools/debug/: BUILD.gn
tools/devshell/: BUILD.gn  OWNERS  README.md  atomic-commit  bazel  build  build-and-upload  build-logs  build-profile  cleanrepo  cleanrepo-build  cog  cog-clean  create-pb-zip  debug  emu  flash  format-code  git  host-tool  ide-query  list-build-artifacts  ninjatrace2json  ota  qemu  rbe  repro  resultstore  sdk-deps  self-build  serial  serve  set  set-main-pb  setup-firewall  setup-mcp-servers  setup-ufw  sync-to  vendor  worktree.fx
tools/doc_checker/: BUILD.gn
tools/docsgen/: BUILD.gn  clidoc_test.py  gen_syscalls_toc.py  reference_doc_checker_test.py
tools/dupefinder/: BUILD.gn  OWNERS  README.md
tools/emulator/: BUILD.gn  emulator.go  emulator_test.go
tools/fidl/: BUILD.gn
tools/fidlcat/: BUILD.gn  command_line_options.cc
tools/funnel/: BUILD.gn
tools/fuzz/: BUILD.gn  connector_mock_test.go  e2e_test.go  fuzzer.go  fuzzer_test.go  ssh_fake_test.go
tools/gemini_analysis/: BUILD.gn  OWNERS  gemini_analysis.py
tools/gn_desc/: BUILD.gn
tools/go_test_parser/: BUILD.bazel  BUILD.gn  gotest.go  gotest_test.go
tools/jj/: config.toml
tools/jq5/: BUILD.bazel  BUILD.gn
tools/lib/: BUILD.gn
tools/make-fuchsia-vol/: BUILD.gn
tools/mdlint/: BUILD.bazel  BUILD.gn
tools/metadata/: BUILD.bazel  BUILD.gn
tools/mobly_test_parser/: BUILD.gn  moblytest.go  moblytest_test.go
tools/multifuchsia/: multifuchsia
tools/orchestrate/: BUILD.gn  config.go  config_test.go  ffx_strict.go  ffx_strict_test.go  orchestrator.go  orchestrator_test.go
tools/pbtool/: BUILD.gn
tools/pkgstats/: BUILD.gn
tools/power_config/: BUILD.gn
tools/pretty_serial/: BUILD.bazel  BUILD.gn
tools/protobuf/: rust_proto_library.gni
tools/qemu/: BUILD.gn
tools/readme_fuchsia/: BUILD.bazel  BUILD.gn  OWNERS  README.fuchsia.template  README.md  fields.go  fields_test.go  formatter.go  formatter_test.go  parser.go  parser_test.go  types.go  validate.go  validate_test.go
tools/rfc/: BUILD.gn
tools/rfc_appscript/: OWNERS
tools/rust-unsafe-analyzer/: BUILD.gn  README.md
tools/rust_extract/: BUILD.bazel  BUILD.gn
tools/rust_test_parser/: BUILD.bazel  BUILD.gn  rusttest.go  rusttest_test.go
tools/sdk-tools/: BUILD.gn  README.md
tools/shush/: BUILD.gn
tools/staticanalysis/: BUILD.bazel  BUILD.gn
tools/symbolizer/: BUILD.gn  log_parser.cc  log_parser_test.cc  symbolizer_impl.cc
tools/test_list_tool/: BUILD.gn
tools/test_pilot/: BUILD.gn
tools/testgen/: BUILD.gn
tools/testing/: BUILD.gn  OWNERS
tools/testing_metadata/: BUILD.gn  OWNERS  (+2 more)
(+26441 files in other folders)
