# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

alias(
    name = "x64",
    actual = "//boards/x64",
)

alias(
    name = "x64_reduced_perf_variation",
    actual = "//boards/x64:reduced_perf_variation",
)

alias(
    name = "arm64",
    actual = "//boards/arm64",
)

alias(
    name = "qemu-arm64",
    actual = "//boards/qemu-arm64",
)

alias(
    name = "vim3",
    actual = "//boards/vim3",
)

alias(
    name = "vim3_reduced_perf_variation",
    actual = "//boards/vim3:reduced_perf_variation",
)

alias(
    name = "vim3_recovery",
    actual = "//boards/vim3:vim3_recovery",
)

alias(
    name = "riscv64",
    actual = "//boards/riscv64",
)

alias(
    name = "pkvm-x64",
    actual = "//boards/pkvm:x64",
)

alias(
    name = "pkvm-arm64",
    actual = "//boards/pkvm:arm64",
)
