# Copyright 2025 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#
# This product import does not build a specific product, but instead supports
# building a number of different products in the same build directory using a
# multi-product build.
#
# This reduces disk consumption and speeds up builds.
#
# Usage:
#   fx set fuchsia.arm64
#   fx set-main-pb minimal.vim3
#   fx build
#   fx set-main-pb microfuchsia_eng.pkvm-arm64
#   fx build

# GN products are not supported in multi-product builds.
use_bazel_images_only = true

# Packages to be published to universe that do not go through assembly.
discoverable_package_labels = [ "//src/developer/debug/debug_agent" ]

# List which product bundles can be built using this build configuration.
product_bundle_labels = [ "//products:product_bundles" ]

# List these boards in boards.json, and upload to CIPD.
assembly_board_configs = [ "//boards" ]

# List these products in products.json, and upload to CIPD.
assembly_product_configs = [ "//products" ]

# Make sure that the developer can manually build these bazel actions.
extra_bazel_build_action_labels = assembly_board_configs
extra_bazel_build_action_labels += product_bundle_labels
