# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_host) {
  group("tools") {
    testonly = true

    public_deps = [
      "//build/bazel/host:bazel_root_host_tools.debroot",
      "//build/bazel/host:bazel_root_host_tools.jq5.host_tool",
      "//build/bazel/host:bazel_root_host_tools.mdlint.host_tool",
      "//build/bazel/host:bazel_root_host_tools.pretty_serial.host_tool",
      "//build/bazel/host:bazel_root_host_tools.rust_extract.host_tool",
      "//tools/auto_owners",
      "//tools/bindc:host",
      "//tools/build",
      "//tools/bundle_fetcher",
      "//tools/clidoc",
      "//tools/cmc:install",
      "//tools/component_id_index",
      "//tools/component_manager_config",
      "//tools/configc:install",
      "//tools/create:install",
      "//tools/doc_checker",
      "//tools/dupefinder",
      "//tools/fidl",
      "//tools/fidlcat:fidlcat_host",
      "//tools/funnel:host",
      "//tools/loglistener:host",
      "//tools/make-fuchsia-vol:host",
      "//tools/net/device-finder:host",
      "//tools/netprotocol",
      "//tools/orchestrate",
      "//tools/pbtool",
      "//tools/pkgstats:install",
      "//tools/power_config",
      "//tools/rfc:install",
      "//tools/sdk-tools:tools",
      "//tools/shush:install",
      "//tools/symbolizer",
      "//tools/test_list_tool:install",
      "//tools/testgen:host",
      "//tools/update_crates",
      "//tools/validate_test_type:install",
      "//tools/zedmon/client:zedmon_client",
    ]
  }
}

# These are part of the build graph, but not depedendencies of //:default, so
# they are never built if not explicitly requested via `fx build <target>`.
group("defined_but_not_built") {
  testonly = true
  public_deps = [ "//tools/gn_desc:gn_desc($host_toolchain)" ]
}

# DEPRECATED! DO NOT ADD TO THIS GROUP
group("build_infra") {
  public_deps = [ "//bundles/infra/build" ]
}

# DEPRECATED! DO NOT ADD TO THIS GROUP
group("test_infra") {
  testonly = true
  public_deps = [ "//bundles/infra/test" ]
}

group("e2e_tests") {
  testonly = true

  deps = []
}

group("host_tests") {
  testonly = true

  deps = [ "//tools/dupefinder:host_tests($host_toolchain)" ]
}

group("tests_no_e2e") {
  testonly = true
  assert_no_deps = e2e_test_libs

  deps = [
    "//tools/artifactory:tests",
    "//tools/auto_owners:tests($host_toolchain)",
    "//tools/bindc:tests",
    "//tools/botanist:tests($host_toolchain)",
    "//tools/build:tests($host_toolchain)",
    "//tools/bundle_fetcher:tests",
    "//tools/cargo-gnaw:tests",
    "//tools/check-licenses:tests($host_toolchain)",
    "//tools/clidoc:tests",
    "//tools/cmc:tests",
    "//tools/component_id_index:tests($host_toolchain)",
    "//tools/component_manager_config:tests($host_toolchain)",
    "//tools/configc:tests",
    "//tools/create:tests",
    "//tools/dart_test_parser:tests($host_toolchain)",
    "//tools/debug:tests($host_toolchain)",
    "//tools/devshell:tests($host_toolchain)",
    "//tools/doc_checker:tests",
    "//tools/docsgen:tests",
    "//tools/fidl:tests",
    "//tools/fidlcat:fidlcat_host_tests($host_toolchain)",
    "//tools/fidlcat/tests",
    "//tools/fuzz:tests",
    "//tools/gemini_analysis:tests",
    "//tools/gn_desc:host_tests($host_toolchain)",
    "//tools/go_test_parser:tests($host_toolchain)",
    "//tools/integration:tests($host_toolchain)",
    "//tools/jq5:tests($host_toolchain)",
    "//tools/lib:tests($host_toolchain)",
    "//tools/lib/serial:tests($host_toolchain)",
    "//tools/make-fuchsia-vol:tests",
    "//tools/mdlint:tests",
    "//tools/mobly_test_parser:tests($host_toolchain)",
    "//tools/net:tests($host_toolchain)",
    "//tools/orchestrate:tests($host_toolchain)",
    "//tools/pbtool:tests($host_toolchain)",
    "//tools/pkgstats:tests",
    "//tools/power_config:tests",
    "//tools/pretty_serial:tests",
    "//tools/qemu:tests($host_toolchain)",
    "//tools/rfc:tests",
    "//tools/rust_test_parser:tests($host_toolchain)",
    "//tools/sdk-tools:tests($host_toolchain)",
    "//tools/shush:tests($host_toolchain)",
    "//tools/staticanalysis:tests",
    "//tools/symbolizer:tests",
    "//tools/test_list_tool:test_list_tool_test($host_toolchain)",
    "//tools/test_pilot:tests",
    "//tools/testgen:tests",
    "//tools/testing:tests($host_toolchain)",
    "//tools/testing_metadata:tests($host_toolchain)",
    "//tools/update_crates:tests($host_toolchain)",
    "//tools/validate_test_type:tests",
    "//tools/virtual_device:tests($host_toolchain)",
    "//tools/whereiscl:tests($host_toolchain)",
    "//tools/zedmon:tests",
  ]
}

group("tests") {
  testonly = true
  deps = [
    ":e2e_tests",
    ":tests_no_e2e",

    # `emulator:tests` contains unit tests for emulator, which depend on
    # emulator so we can't put it in `tests_no_e2e`, but it's not an e2e tests
    # neither.
    "//tools/emulator:tests",
  ]
}
