# Copyright 2026 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_build_info//:args.bzl", "build_info_version")
load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_board_configuration",
    "fuchsia_prebuilt_board_input_bundle",
)

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

fuchsia_board_configuration(
    name = "arm64",
    board_input_bundles = [
        ":main_bundle",
        "//boards/emulation/virtio",
    ],
    board_name = "arm64",
    filesystems = {
        "vbmeta": {
            "key": "LABEL(//:third_party/android/platform/external/avb/test/data/testkey_atx_psk.pem)",
            "key_metadata": "LABEL(//:third_party/android/platform/external/avb/test/data/atx_metadata.bin)",
        },
        "fvm": {
            "blobfs": {
                "size_checker_maximum_bytes": 5216665600,
            },
            "sparse_output": {},
        },
        "fxfs": {
            "size_checker_maximum_bytes": 5216665600,
        },
    },
    hardware_info = {
        "name": "qemu-arm64",
        "product_id": 1,
        "vendor_id": 1,
        "revision": 1,
    },
    partitions_configuration = "//build/bazel/assembly/partitions_configurations:arm64",
    provided_features = [
        # keep-sorted start
        "fuchsia::bus_pci",
        "fuchsia::driver_framework_v2_support",
        "fuchsia::input",
        "fuchsia::paravirtualization",
        "fuchsia::power",
        "fuchsia::pwm",
        "fuchsia::real_time_clock",
        "fuchsia::shared_registers",
        "fuchsia::usb_host",
        "fuchsia::usb_peripheral_support",
        "fuchsia::vulkan_gpu",
        "fuchsia::xhci",

        # keep-sorted end
    ],
    version = build_info_version,
    zbi_extra_items = ["@gn_targets//boards/arm64:qemu_psci_cpu_suspend_states"],
)

fuchsia_prebuilt_board_input_bundle(
    name = "main_bundle",
    files = "@gn_targets//boards/arm64:main_bundle",
)
