# Copyright 2021 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Drivers required for virtio support.
#
# These drivers are used when Fuchsia is running as a guest in a hypervisor
# such as QEMU.
virtio_drivers = [
  "//src/devices/block/drivers/virtio:virtio_block",
  "//src/devices/misc/drivers/virtio-socket:virtio_socket",
  "//src/devices/serial/drivers/virtio-console:virtio_console",
]
