# Copyright 2026 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_build_info//:args.bzl", "build_info_version")
load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_board_configuration",
)

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

fuchsia_board_configuration(
    name = "qemu-arm64",
    board_input_bundles = [
        "//boards/arm64:main_bundle",
        "//boards/emulation/virtio",
    ],
    board_name = "qemu-arm64",
    filesystems = {
        "fvm": {
            "slice_size": 8388608,
            "blobfs": {
                "size_checker_maximum_bytes": 5216665600,
            },
            "sparse_output": {},
        },
        "fxfs": {
            "size_checker_maximum_bytes": 5216665600,
        },
    },
    hardware_info = {
        "name": "qemu-arm64",
        "product_id": 1,
        "vendor_id": 1,
        "revision": 1,
    },
    partitions_configuration = "//build/bazel/assembly/partitions_configurations:qemu-arm64",
    provided_features = [
        # keep-sorted start
        "fuchsia::bus_pci",
        "fuchsia::driver_framework_v2_support",
        "fuchsia::real_time_clock",
        "fuchsia::usb_host",
        # keep-sorted end
    ],
    version = build_info_version,
)
