# Copyright 2026 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_build_info//:args.bzl", "build_info_version")
load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_board_configuration",
    "fuchsia_prebuilt_board_input_bundle",
)

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

fuchsia_board_configuration(
    name = "riscv64",
    board_input_bundles = [
        ":main_bundle",
        ":virtio",
    ],
    board_name = "riscv64",
    filesystems = {
        "fvm": {
            "sparse_output": {},
        },
        "fxfs": {},
    },
    hardware_info = {
        "name": "qemu-riscv64",
        "product_id": 1,
        "vendor_id": 1,
        "revision": 1,
    },
    partitions_configuration = "//build/bazel/assembly/partitions_configurations:riscv64",
    provided_features = [
        # keep-sorted start
        "fuchsia::driver_framework_v2_support",
        "fuchsia::network_require_netstack3",
        # TODO: b/299320231 - Remove when ring is supported on riscv64.
        "fuchsia::soft_crypto",
        "fuchsia::usb_host",
        # See: b/308199171
        "fuchsia::utc_start_at_startup",
        # keep-sorted end
    ],
    version = build_info_version,
)

fuchsia_prebuilt_board_input_bundle(
    name = "main_bundle",
    files = "@gn_targets//boards/riscv64:main_bundle",
)

fuchsia_prebuilt_board_input_bundle(
    name = "virtio",
    files = "@gn_targets//boards/emulation/virtio",
)
